@@ -1,3 +1,11 @@
+2004-02-07  Bud Davis  <bdavis9659@comcast.net>
+ 
+	PR gfortran/13909
+	* intrinsic.c (add_conversions) Use logical conversion instead
+	of real.
+	* trans-types.c (gfc_get_logical_type) implemented logical*1
+	and logical*2.
+
 2004-01-17  Paul Brook  <paul@codesourcery.com>
 
 	* lang-specs.h: Remove %<fixed-form.
